--- a/TodoApp/package.json
+++ b/TodoApp/package.json
@@ -14,6 +14,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-elements": "^3.3.1",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
