--- a/TodoApp/package.json
+++ b/TodoApp/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "src/AppEntry.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -16,13 +16,18 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^3.3.1",
     "react-native-iphone-x-helper": "^1.3.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@expo/webpack-config": "^0.12.61",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-redux": "^7.1.16",
+    "tsconfig-paths-webpack-plugin": "^3.4.1",
     "typescript": "~4.0.0"
   },
   "private": true
