--- a/TodoApp/package.json
+++ b/TodoApp/package.json
@@ -18,7 +18,8 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
